--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,46 @@
+bidict==0.23.1
+black==25.1.0
+blinker==1.9.0
+boto3==1.39.10
+botocore==1.39.10
+certifi==2025.4.26
+charset-normalizer==3.4.1
+click==8.1.8
+cowsay==6.1
+defusedxml==0.7.1
+emoji==2.14.1
 Flask==3.1.1
+Flask-SocketIO==5.5.1
+fonttools==4.58.0
+fpdf2==2.8.3
+h11==0.16.0
+idna==3.10
+inflect==7.5.0
+iniconfig==2.1.0
+itsdangerous==2.2.0
+Jinja2==3.1.6
+jmespath==1.0.1
+MarkupSafe==3.0.2
+more-itertools==10.7.0
+mypy_extensions==1.1.0
+packaging==25.0
+pathspec==0.12.1
+pillow==11.2.1
+platformdirs==4.3.7
+pluggy==1.5.0
+pyfiglet==1.0.2
+pytest==8.3.5
+python-dateutil==2.9.0.post0
+python-engineio==4.12.2
+python-socketio==5.13.0
+requests==2.32.3
+s3transfer==0.13.1
+simple-websocket==1.1.0
+six==1.17.0
+tabulate==0.9.0
+tqdm==4.67.1
+typeguard==4.4.2
+typing_extensions==4.13.2
+urllib3==2.4.0
+Werkzeug==3.1.3
+wsproto==1.2.0
